--- a/Counter-Strike Global Offensive/csgo/cfg/autoexec.cfg
+++ b/Counter-Strike Global Offensive/csgo/cfg/autoexec.cfg
@@ -49,7 +49,11 @@ hud_showtargetid		"1"
 net_graph			"1"
 
 // Other
-viewmodel_presetpos 		"1"
+viewmodel_presetpos 		"0"
+viewmodel_fov           "58"
+viewmodel_offset_y      "2"
+viewmodel_offset_x      "2"
+viewmodel_offset_z      "-2"
 con_enable			"1"
 cl_disablefreezecam		"1"
 r_drawtracers_firstperson	"0"
@@ -59,7 +63,5 @@ cl_autowepswitch		"0"
 volume				"0.06"
 voice_scale			"1"
 snd_menumusic_volume		"0"
-
-exec 				"bhop.cfg"
 
 host_writeconfig
