--- a/Counter-Strike Source/cstrike/cfg/autoexec.cfg
+++ b/Counter-Strike Source/cstrike/cfg/autoexec.cfg
@@ -1,65 +1,61 @@
 // Mouse
-m_mousespeed 			"0"
-m_rawinput 			"1"
+m_mousespeed                    "0"
+m_rawinput                      "1"
+sensitivity                     "0.9"
 
 // Alias
-alias 				"+jt"			"+jump;-attack" 
-alias 				"-jt"			"-jump" 
-alias 				"+showng"		"+showscores; net_graphheight 64"
-alias 				"-showng"		"-showscores; net_graphheight 10000"
-alias				"+turn" 		"sensitivity 1.2"
-alias				"-turn" 		"sensitivity 0.6" 
-alias				"stfu"			"toggle voice_scale 1 0.1"
-alias 				"bhop"			"exec bhop.cfg"
-alias 				"play"			"exec play.cfg"
-alias 				"cfg"			"exec autoexec.cfg"
+alias                           "+jt"           "+jump;-attack" 
+alias                           "-jt"           "-jump" 
+alias                           "+showng"       "+showscores; net_graphheight 64"
+alias                           "-showng"       "-showscores; net_graphheight 10000"
+alias                           "stfu"          "toggle voice_scale 1 0.1"
+alias                           "scroll"        "bind mwheeldown +jump; bind mwheelup +jump"
+alias                           "noscroll"      "unbind mwheeldown; unbind mwheelup"
 
 // Keybinds
-unbind 				"q"
-unbind 				"f"
-unbind 				"t"
-bind 				"1"			"slot1"
-bind 				"2"			"slot2"
-bind 				"3"			"slot3"
-bind 				"4"			"use weapon_hegrenade"
-bind 				"5"			"use weapon_flashbang"
-bind 				"6"			"use weapon_smokegrenade"
-bind 				"7"			"slot5"
-bind 				"8"			"use weapon_incgrenade; use weapon_molotov;"
-bind 				"9"			"use weapon_decoy"
-bind 				"w"			"+forward"
-bind 				"a"			"+moveleft"
-bind 				"d"			"+moveright"
-bind 				"s"			"+back"
-bind 				"shift"			"+duck"
-bind 				"ctrl"			"+speed"
-bind 				"x"			"+lookatweapon; r_cleardecals 1"
-bind 				"c"			"sm_r"
-bind 				"v"			"+voicerecord"
-bind 				"t"			"+jt"
-bind 				"tab"			"+showng"
+unbind                          "q"
+unbind                          "f"
+unbind                          "t"
+bind                            "1"             "slot1"
+bind                            "2"             "slot2"
+bind                            "3"             "slot3"
+bind                            "4"             "use weapon_hegrenade"
+bind                            "5"             "use weapon_flashbang"
+bind                            "6"             "use weapon_smokegrenade"
+bind                            "7"             "slot5"
+bind                            "8"             "use weapon_incgrenade; use weapon_molotov;"
+bind                            "9"             "use weapon_decoy"
+bind                            "w"             "+forward"
+bind                            "a"             "+moveleft"
+bind                            "d"             "+moveright"
+bind                            "s"             "+back"
+bind                            "shift"         "+duck"
+bind                            "ctrl"          "+speed"
+bind                            "x"             "+lookatweapon; r_cleardecals 1"
+bind                            "c"             "sm_tele"
+bind                            "v"             "+voicerecord"
+bind                            "t"             "+jt"
+bind                            "tab"           "+showng"
 
 // Hud
-cl_hud_bomb_under_radar		"1"
-cl_hud_healthammo_style		"0"
-cl_hud_playercount_pos		"0"
-cl_hud_playercount_showcount	"0"
-cl_hud_radar_scale		"1.14"
-hud_showtargetid		"1"
-net_graph			"1"
+cl_hud_bomb_under_radar         "1"
+cl_hud_healthammo_style         "0"
+cl_hud_playercount_pos          "0"
+cl_hud_playercount_showcount    "0"
+cl_hud_radar_scale              "1.14"
+hud_showtargetid                "1"
+net_graph                       "1"
 
 // Other
-viewmodel_presetpos 		"1"
-con_enable			"1"
-cl_disablefreezecam		"1"
-r_drawtracers_firstperson	"0"
-cl_crosshair_sniper_width	"2"
-cl_use_opens_buy_menu		"0"
-cl_autowepswitch		"0"
-volume				"0.06"
-voice_scale			"1"
-snd_menumusic_volume		"0"
-
-exec 				"bhop.cfg"
+viewmodel_presetpos             "1"
+con_enable                      "1"
+cl_disablefreezecam             "1"
+r_drawtracers_firstperson       "0"
+cl_crosshair_sniper_width       "2"
+cl_use_opens_buy_menu           "0"
+cl_autowepswitch                "0"
+volume                          "0.06"
+voice_scale                     "1"
+snd_menumusic_volume            "0"
 
 host_writeconfig
