update viewmodel and volume

--- a/Counter-Strike Global Offensive/csgo/cfg/autoexec.cfg
+++ b/Counter-Strike Global Offensive/csgo/cfg/autoexec.cfg
@@ -47,14 +47,18 @@ hud_showtargetid                "1"
 net_graph                       "1"
 
 // Other
-viewmodel_presetpos             "1"
+viewmodel_presetpos             "0"
+viewmodel_offset_x              "2.5"
+viewmodel_offset_y              "1"
+viewmodel_offset_z              "-2"
+viewmodel_fov                   "62"
 con_enable                      "1"
 cl_disablefreezecam             "1"
 r_drawtracers_firstperson       "0"
 cl_crosshair_sniper_width       "2"
 cl_use_opens_buy_menu           "0"
 cl_autowepswitch                "0"
-volume                          "0.06"
+volume                          "0.04"
 voice_scale                     "1"
 snd_menumusic_volume            "0"
 
